--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 server.port = 9002
+
+spring.application.name=student-service
+eureka.client.service-url.default-zone=http:localhost:8761/eureka
