--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/student_service
-spring.datasource.username = root
-spring.datasource.password = sapassword
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+#spring.datasource.username = root
+#spring.datasource.password = sapassword
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 server.port = 9002
-spring.application.name=student-service
-eureka.client.service-url.default-zone=http:localhost:8761/eureka
+#spring.application.name=student-service
+#eureka.client.service-url.default-zone=http:localhost:8761/eureka
