--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,3 +15,19 @@ resilience4j:
       basic:
         maxRetryAttemps: 5
         waitDuration: 3s
+
+      intervalFunctionExponentialExample:
+        enableExponentialBackoff: true
+        exponentialBackoffMultiplier: 2
+        maxRetryAttempts: 6
+        waitDuration: 2s
+
+      intervalFunctionRandomExample:
+        enableRandomizedWait: true
+        maxRetryAttempts: 3
+        randomizedWaitFactor: 0.5
+        waitDuration: 2s
+
+      loggedRetryExample:
+        maxRetryAttempts: 3
+        waitDuration: 2s
